# orpheus

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  mise.toml  pyproject.toml  stream.py  test_hyperbolic.py
.github/workflows/: release-plz.yml  rust.yml
crates/orpheus/: Cargo.toml
crates/orpheus-agent/: Cargo.toml
crates/orpheus-agent/examples/: agent-weather.rs
crates/orpheus-agent/src/: agent.rs  error.rs  event.rs  hook.rs  lib.rs  tool.rs
crates/orpheus-coding-agent/: Cargo.toml
crates/orpheus-coding-agent/src/: cli.rs  config.rs  lib.rs  main.rs  runtime.rs  session.rs  tools.rs
crates/orpheus/examples/: charades.rs  weather.rs
crates/orpheus/src/: lib.rs
crates/orpheus/src/client/: core.rs
crates/orpheus/src/client/methods/: respond.rs
crates/orpheus/src/models/: ext.rs  format.rs  input.rs  message.rs  request.rs  stream.rs  tool.rs
crates/orpheus/tests/: integration.rs
docs/: README.md  SUMMARY.md  fallback-models.md  multimodality.md
docs/basics/: fallback-models.md
docs/basics/configuring-providers/: README.md  allow-deny-data-collection.md  latency-vs-price-vs-throughput.md  limiting-the-provider-list.md  setting-requirements.md  using-quantization.md
docs/basics/getting-started/: README.md  streaming-responses.md  using-message-history.md
docs/basics/switching-models/: README.md  model-routers.md
docs/configuring-providers/: README.md  allow-deny-data-collection.md  latency-vs-price-vs-throughput.md  limiting-the-provider-list.md  setting-requirements.md  using-quantization.md
docs/features/: async-support.md  caching.md  multimodality.md  plugins.md  reasoning.md  structured-output.md  tool-calling.md  transforms.md
docs/features/tool-calling/: README.md  defining-tools.md  using-tools.md
docs/integrations/: a2a.md  ai-sdk.md  mcp.md
examples/: charades.rs  extractor.rs  langfuse-chat.rs  langfuse.rs  logging.rs  mcp-chat.rs  mcp.rs  otel-chat.rs  otel.rs  philosopher.rs  reasoning-bot.rs  reasoning-stream-bot.rs  weather-tool.rs  weather.rs
examples/rust/: charades.rs  extractor.rs  langfuse.rs  logging.rs  mcp.rs  otel.rs  philosopher.rs  weather.rs
examples/rust/charades/: Cargo.toml
examples/rust/charades/src/: main.rs
orpheus-core/: Cargo.toml  orpheus_core.pyi  pyproject.toml
orpheus-core/src/: constants.rs  lib.rs  types.rs
orpheus-core/src/blocking/: chat.rs  common.rs  embed.rs  mod.rs
orpheus-core/src/concurrent/: chat.rs  mod.rs
orpheus-core/src/models/: embed.rs  mod.rs
orpheus-core/src/models/chat/: message.rs  mod.rs  prompt.rs  response.rs
orpheus-core/src/nonblocking/: chat.rs  common.rs  embed.rs  mod.rs
orpheus-core/src/types/: chat.rs  embed.rs  mod.rs  prompt.rs
orpheus-core/src/types/chat/: message.rs  mod.rs  prompt.rs
plans/: orpheus-coding-agent-blueprint.md
py/orpheus/: __init__.py  _core.pyi
py/orpheus/client/: __init__.py
py/orpheus/models/: __init__.py
python/orpheus/: __init__.py  _core.pyi
python/orpheus/models/: __init__.py
scripts/: async_benchmark.py  benchmark.py
scripts/benchmarks/: _langchain.py  _openai.py  _orpheus.py  run.sh
scripts/benchmarks/async/: _async_langchain.py  _async_openai.py  _async_orpheus.py
src/: client.rs  constants.rs  error.rs  exceptions.rs  integrations.rs  lib.rs  models.rs  prelude.rs  utils.rs
src/backend/: gemini.rs  mod.rs  open_responses.rs  traits.rs
src/blocking/: chat.rs  embed.rs  mod.rs
src/client/: blocking.rs  chat.rs  core.rs  embeddings.rs  handler.rs  mod.rs  mode.rs  non_blocking.rs  nonblocking.rs
src/client/blocking/: chat.rs  completion.rs  keys.rs  main.rs  mod.rs
src/client/core/: handler.rs  keystore.rs  mod.rs  mode.rs  pool.rs
src/client/handler/: response.rs
src/client/methods/: chat.rs  completion.rs  keys.rs  mod.rs  respond.rs
src/client/nonblocking/: chat.rs  completion.rs  main.rs  mod.rs
src/concurrent/: chat.rs
src/integrations/: langfuse.rs  mod.rs  otel.rs
src/integrations/mcp/: context.rs  mod.rs  tools.rs
src/mcp/: context.rs  mod.rs  tools.rs
src/models/: chat.rs  common.rs  completion.rs  ext.rs  format.rs  input.rs  keys.rs  message.rs  mod.rs  request.rs  stream.rs  tool.rs
src/models/chat/: handler.rs  message.rs  mod.rs  otel.rs  prompt.rs  request.rs  response.rs  response.rs.bak
src/models/chat/request/: body.rs  content.rs  handler.rs  message.rs  mod.rs  plugins.rs  reasoning.rs  structured.rs  tool.rs  usage.rs
src/models/chat/response/: completion.rs  mod.rs  stream.rs  usage.rs
src/models/chat/response/stream/: blocking.rs  chunk.rs  common.rs  mod.rs  nonblocking.rs
src/models/common/: handler.rs  mod.rs  mode.rs  provider.rs  reasoning.rs  transforms.rs  usage.rs
src/models/completion/: handler.rs  mod.rs  request.rs  response.rs
src/models/completion/request/: body.rs  handler.rs  mod.rs
src/models/keys/: handler.rs  mod.rs  request.rs  response.rs
src/nonblocking/: chat.rs  embed.rs  mod.rs
src/orpheus/: __init__.py  _core.pyi  _utils.py
src/orpheus/client/: __init__.py
src/orpheus/models/: __init__.py
src/orpheus/types/: __init__.py
src/types/: chat.rs  generation.rs  message.rs  mod.rs  prompt.rs  stream.rs  tokens.rs
tests/: integration.rs
tests/integration/: conftest.py  test_generation.py  test_native_api.py
tests/python/e2e/: conftest.py  test_async_generation.py  test_generation.py  test_native_api.py
tests/python/unit/: test_messages.py
tests/unit/: test_client.py  test_messages.py
