[package]
name = "orpheus"
version = "0.1.3"
edition = "2021"
description = "An ergonomic Open Responses API client"
homepage = "https://orpheus.ajac-zero.com"
repository = "https://github.com/ajac-zero/orpheus"
readme = "README.md"
license = "MIT"

[lib]
name = "orpheus"
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
bon = "3.6.3"
bytes = "1.10.1"
deadpool = "0.12.3"
futures-lite = "2.6.0"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http2"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http2"] }
hyper-util = "0.1.16"
open-responses = { path = "../open-responses" }
rustls = "0.23.31"
secrecy = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt", "macros", "full"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["aws-lc-rs"] }
tracing = "0.1.41"
url = "2.5.4"
webpki-roots = "1.0.2"

[dev-dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
