[package]
name = "orpheus"
version = "0.1.3"
edition = "2021"
description = "An ergonomic Open Responses API client"
homepage = "https://orpheus.ajac-zero.com"
repository = "https://github.com/ajac-zero/orpheus"
readme = "README.md"
license = "MIT"

[lib]
name = "orpheus"
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
bon = "3.6.3"
open-responses = { path = "../open-responses", features = ["client"] }
secrecy = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"

[dev-dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
futures-util = "0.3"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
