[project]
name = "orpheus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ajac-zero", email = "ajcardoza2000@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ai-mock>=0.3.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-sugar>=1.0.0",
    "testcontainers>=4.9.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.maturin]
module-name = "orpheus._core"
python-packages = ["orpheus"]
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
