[project]
name = "orpheus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ajac-zero", email = "ajcardoza2000@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "orjson>=3.10.15",
    "orpheus-core",
]

[tool.uv.sources]
orpheus-core = { workspace = true }

[tool.uv.workspace]
members = ["orpheus-core"]

[dependency-groups]
dev = [
  "ai-mock>=0.3.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "pytest-sugar>=1.0.0",
  "ruff>=0.11.2",
  "testcontainers>=4.9.2",
]
benchmark = [
  "argparse>=1.4.0",
  "langchain-openai>=0.3.9",
  "litellm>=1.63.14",
  "matplotlib>=3.10.1",
  "openai>=1.68.2",
  "pyperf>=2.9.0",
  "rich>=13.9.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
