[project]
name = "orpheus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ajac-zero", email = "ajcardoza2000@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "orjson>=3.10.15",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
  "ai-mock>=0.3.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "pytest-sugar>=1.0.0",
  "ruff>=0.11.2",
  "testcontainers>=4.9.2",
]
benchmark = [
  "argparse>=1.4.0",
  "langchain-openai>=0.3.9",
  "litellm>=1.63.14",
  "matplotlib>=3.10.1",
  "openai>=1.68.2",
  "pyperf>=2.9.0",
  "rich>=13.9.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "py"
module-name = "orpheus._core"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"
