[package]
name = "orpheus-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "orpheus_core"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.10.1"
either = { version = "1.15.0", features = ["serde"] }
futures-lite = "2.6.0"
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py39", "experimental-async", "either", "serde", "smallvec"] }
pyo3-async-runtimes = { version = "0.24.0", features = ["tokio-runtime"] }
pythonize = "0.24.0"
reqwest = { version = "0.12.12", features = ["json", "blocking", "rustls-tls", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
smallvec = { version = "1.14.0", features = ["serde"] }
tokio = "1.44.1"
url = "2.5.4"
