[project]
name = "orpheus-core"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "ajac-zero", email = "ajcardoza2000@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"
