[package]
name = "orpheus-agent"
version = "0.1.0"
edition = "2021"
description = "An agentic orchestration layer built on top of Orpheus"
homepage = "https://orpheus.ajac-zero.com"
repository = "https://github.com/ajac-zero/orpheus"
license = "MIT"

[dependencies]
futures-core = "0.3.32"
orpheus = { path = "../orpheus" }

[dev-dependencies]
anyhow = "1.0.99"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
