[package]
name = "orpheus-coding-agent"
version = "0.1.0"
edition = "2021"
description = "A runnable coding agent built on top of Orpheus and orpheus-agent"
homepage = "https://orpheus.ajac-zero.com"
repository = "https://github.com/ajac-zero/orpheus"
license = "MIT"

[[bin]]
name = "orpheus-code"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
clap = { version = "4.5.47", features = ["derive"] }
directories = "5.0.1"
orpheus = { path = "../orpheus" }
orpheus-agent = { path = "../orpheus-agent" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
wait-timeout = "0.2.0"

[dev-dependencies]
tempfile = "3.22.0"
